--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 title: Mehameha
+baseURL: http://www.zhizhiting.com
 theme: maupassant
 paginate: 10
 PaginatePath: "page"
@@ -28,13 +29,14 @@ menu:
       name: 关于
       url: /about/
       weight: 4
+
 summaryLength: 140
 hasCJKLanguage: true
 subtitle: "专注于Java、Python、项目管理、软件架构"
 keywords: "Java、Python、MySQL、Groovy、大数据"
 disablePathToLower: true
 params:
-  busuanzi: true
+  busuanzi: false
   description: "莫道君行早，更有早行人。"
   toc: false
   sequenceDiagrams:
