--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/maupassant"]
 	path = themes/maupassant
-	url = git@gitee.com:dotions/maupassant.git
+	url = https://gitee.com/dotions/maupassant.git
