--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,9 +8,9 @@ collections:
     label: 'Blog'
     folder: 'content/post'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
