--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ media_folder: static/img
 public_folder: /img
 collections:
   - name: 'blog'
-    label: 'Blog'
+    label: '随笔'
     folder: 'content/post'
     create: true
     slug: '{{slug}}'
@@ -13,8 +13,8 @@ collections:
       preview: true
     fields:
       - { label: '标题', name: 'title', widget: 'string' }
-      - { label: '发布日期', name: 'date', widget: 'datetime' }
-      - { label: '描述', name: 'description', widget: 'string' }
-      - { label: '标签', name: 'tags', widget: 'list', allow_add: true, default: ['读书']}
-      - { label: '分类', name: 'categories', widget: 'list', allow_add: true, default: ['笔记']}
+      - { label: '作者', name: 'author', widget: 'string', default: 'Scott'}
+      - { label: '日期', name: 'date', widget: 'datetime' }
+      - { label: '标签', name: 'tags', widget: 'list', allow_add: true, label_singular: '+', collapsed=false, default: ['随笔']}
+      - { label: '分类', name: 'categories', widget: 'list', allow_add: true, default: ['随笔']}
       - { label: '内容', name: 'body', widget: 'markdown' }
