--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,14 +4,16 @@ backend:
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: 'blog'
+  - name: 'note'
+    identifier_field: identifier
     label: '随笔'
-    folder: 'content/post'
+    folder: 'content/note'
     create: true
     slug: '{{slug}}'
     editor:
       preview: true
     fields:
+      - { label: 'ID', name: 'ID', widget: 'string'}
       - { label: '标题', name: 'title', widget: 'string' }
       - { label: '作者', name: 'author', widget: 'string', default: 'Scott'}
       - { label: '日期', name: 'date', widget: 'datetime' }
