--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,17 +21,13 @@ collections:
       - { label: '分类', name: 'categories', widget: 'list', allow_add: true, default: ['随笔']}
       - { label: '内容', name: 'body', widget: 'markdown' }
   - name: 'notes'
-    identifier_field: identifier
     label: '随笔'
     folder: 'content/notes'
     create: true
-    slug: '{{slug}}'
+    slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{second}}'
     editor:
       preview: true
     fields:
-      - { label: '标题', name: 'title', widget: 'string' }
-      - { label: 'ID', name: 'identifier', widget: 'string'}
-      - { label: '作者', name: 'author', widget: 'string', default: 'Scott'}
       - { label: '日期', name: 'date', widget: 'datetime' }
       - { label: '标签', name: 'tags', widget: 'list', allow_add: true, label_singular: '+', collapsed=false, default: ['随笔']}
       - { label: '分类', name: 'categories', widget: 'list', allow_add: true, default: ['随笔']}
